[package]
name = "rsvc"
version = "0.1.0"
authors = ["BiggieBoo18"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.9.0"
plotlib = "0.4.0"
failure = "0.1.5"
Rust-WORLD = "0.1.1"
cpal = "0.11.0"
anyhow = "1.0.12"
hound = "3.4"
